Bug 481614 - implement clip property. r=jwatt