layout/svg/base/src/nsSVGMarkerFrame.cpp
@@ -174,7 +174,9 @@ nsSVGMarkerFrame::PaintMark(nsSVGRenderState *aContext,
     NS_ENSURE_TRUE(matrix, NS_ERROR_OUT_OF_MEMORY);
 
     gfx->Save();
-    nsSVGUtils::SetClipRect(gfx, matrix, x, y, width, height);
+    gfxRect clipRect =
+      nsSVGUtils::GetClipRectForFrame(this, x, y, width, height);
+    nsSVGUtils::SetClipRect(gfx, matrix, clipRect);
   }
 
   for (nsIFrame* kid = mFrames.FirstChild(); kid;
