layout/svg/base/src/nsSVGUtils.cpp
@@ -1220,6 +1220,47 @@ nsSVGUtils::HitTestRect(nsIDOMSVGMatrix *aMatrix,
   return result;
 }
 
+gfxRect
+nsSVGUtils::GetClipRectForFrame(nsIFrame *aFrame,
+                                float aX, float aY, float aWidth, float aHeight)
+{
+  const nsStyleDisplay* disp = aFrame->GetStyleDisplay();
+
+  if (!(disp->mClipFlags & NS_STYLE_CLIP_RECT)) {
+    NS_ASSERTION(disp->mClipFlags == NS_STYLE_CLIP_AUTO,
+                 "We don't know about this type of clip.");
+    return gfxRect(aX, aY, aWidth, aHeight);
+  }
+
+  if (disp->mOverflowX == NS_STYLE_OVERFLOW_HIDDEN ||
+      disp->mOverflowY == NS_STYLE_OVERFLOW_HIDDEN) {
+
+    nsIntRect clipPxRect =
+      disp->mClip.ToOutsidePixels(aFrame->PresContext()->AppUnitsPerDevPixel());
+    gfxRect clipRect =
+      gfxRect(clipPxRect.x, clipPxRect.y, clipPxRect.width, clipPxRect.height);
+
+    if (NS_STYLE_CLIP_RIGHT_AUTO & disp->mClipFlags) {
+      clipRect.size.width = aWidth - clipRect.X();
+    }
+    if (NS_STYLE_CLIP_BOTTOM_AUTO & disp->mClipFlags) {
+      clipRect.size.height = aHeight - clipRect.Y();
+    }
+
+    if (disp->mOverflowX != NS_STYLE_OVERFLOW_HIDDEN) {
+      clipRect.pos.x = aX;
+      clipRect.size.width = aWidth;
+    }
+    if (disp->mOverflowY != NS_STYLE_OVERFLOW_HIDDEN) {
+      clipRect.pos.y = aY;
+      clipRect.size.height = aHeight;
+    }
+     
+    return clipRect;
+  }
+  return gfxRect(aX, aY, aWidth, aHeight);
+}
+
 void
 nsSVGUtils::CompositeSurfaceMatrix(gfxContext *aContext,
                                    gfxASurface *aSurface,
@@ -1250,7 +1291,7 @@ nsSVGUtils::CompositePatternMatrix(gfxContext *aContext,
 
   aContext->Save();
 
-  SetClipRect(aContext, aCTM, 0, 0, aWidth, aHeight);
+  SetClipRect(aContext, aCTM, gfxRect(0, 0, aWidth, aHeight));
 
   aContext->Multiply(matrix);
 
@@ -1262,8 +1303,8 @@ nsSVGUtils::CompositePatternMatrix(gfxContext *aContext,
 
 void
 nsSVGUtils::SetClipRect(gfxContext *aContext,
-                        nsIDOMSVGMatrix *aCTM, float aX, float aY,
-                        float aWidth, float aHeight)
+                        nsIDOMSVGMatrix *aCTM,
+                        const gfxRect &aRect)
 {
   gfxMatrix matrix = ConvertSVGMatrixToThebes(aCTM);
   if (matrix.IsSingular())
@@ -1271,7 +1312,7 @@ nsSVGUtils::SetClipRect(gfxContext *aContext,
 
   gfxMatrix oldMatrix = aContext->CurrentMatrix();
   aContext->Multiply(matrix);
-  aContext->Clip(gfxRect(aX, aY, aWidth, aHeight));
+  aContext->Clip(aRect);
   aContext->SetMatrix(oldMatrix);
 }
 
